TestSuite/PascalABCTests/errors/err0144.pas
const 
  a : integer = 3;
  b : string = a;
  
begin

end.